# k-densest-neighborhood

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  baseline_bfs.py  build.sh  build_gui.sh  evaluate.py  evaluate_solver.py  generate_graph.py  main.py  main_pab.py  prepare_data.py  server.py  solver.cpp  solver_utils.py
archive/: k_densest_classifier.py  main.py
backend/: server.py
docs/: research_paper.tex  research_slides.tex  research_slides_script.txt
docs/paper/: manuscript.tex  references.bib
docs/paper/generated_tables/: all_tables.tex  cost_table.tex  hard_table.tex  quality_table.tex  test_table.tex  validation_table.tex
docs/slides/: research_slides_script.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: GraphView.jsx  PaperLedger.jsx  PaperModal.jsx  Sidebar.jsx  TelemetryFloatingPanel.jsx  TelemetryPanel.jsx
frontend/src/hooks/: useDragResize.js  useMediaQuery.js  useSubgraphExtractor.js
frontend/src/utils/: format.js  telemetryParser.js
kdensest-gui/: index.html
kdensest-gui/src/: App.jsx
kdensest-gui/src/components/: GraphView.jsx  PaperLedger.jsx  PaperModal.jsx  Sidebar.jsx
kdensest-gui/src/hooks/: useDragResize.js
misc/: pbnb.py
scripts/: _solver_runner.py  evaluate.py  test_solver_runner.py  tune.py
scripts/classification/: aggregate_classification.py  aggregate_cluster_quality.py  aggregate_cost.py  aggregate_experiment.py  aggregate_to_latex.py  compare_bfs_bp_feasibility.py  evaluate.py  evaluate_bfs_hard_subset.py  evaluate_fixed_methods.py  evaluate_test.py  paired_bootstrap_ties.py  prepare_data.py  record_io.py  solver_utils.py  split_utils.py  sweep_cluster_quality.py  test_solver_utils.py  tune.py  tune_methods.py  tune_val.py
scripts/synthetic/: benchmark_solvers.py  bf_summarize.py  bruteforce_verify.py  evaluate_solver.py  test_brute_force_optima.py
solver/: CMakeLists.txt  build.sh
solver/src/: average_degree_solver.cpp  average_degree_solver.hpp  bfs_expand.cpp  bfs_expand.hpp  bfs_solver.cpp  bfs_solver.hpp  common.hpp  connected_greedy_baseline.cpp  connected_greedy_baseline.hpp  exact_connected_avg_degree.cpp  exact_connected_avg_degree.hpp  grow_to_k.cpp  grow_to_k.hpp  main.cpp  openalex_oracle.cpp  openalex_oracle.hpp  oracle.hpp  simulation_oracle.cpp  solver.cpp  solver.hpp  subgraph_quality.cpp  subgraph_quality.hpp
src/: common.hpp  main.cpp  openalex_oracle.cpp  openalex_oracle.hpp  oracle.hpp  simulation_oracle.cpp  simulation_oracle.hpp  solver.cpp  solver.hpp
